# meson

test cases/common/283 pkgconfig subproject/: meson.build  test.json
test cases/common/283 pkgconfig subproject/subprojects/test2/: exports.def  meson.build  test2.c
